Fix calculator.css history overflow and dark mode.

--- a/calculator.css
+++ b/calculator.css
@@ -36,6 +36,7 @@ body,
   left: 0;
   top: 0;
   visibility: hidden;
+  overflow: hidden;
   padding: 0.25em;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
@@ -67,7 +68,7 @@ body,
   .history-values {
     overflow-y: auto;
     width: 100%;
-    max-height: 300px;
+    max-height: 88%;
     padding: 0.25em;
     text-align: right;
     word-wrap: break-word;
@@ -95,7 +96,7 @@ body,
 
 .wrapper {
   flex: 1;
-  width: 25em;
+  width: min(25em, 97vw);
 }
 
 .wrapper:nth-child(2) {
@@ -126,9 +127,6 @@ body,
   }
 
   .eval {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
     text-align: center;
   }
 
@@ -149,6 +147,9 @@ body,
   .eval,
   .expression.evaluated {
     color: rgb(0, 120, 0);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
     font-weight: 700;
     font-style: italic;
   }
@@ -219,8 +220,7 @@ body,
 .eval::before {
   content: " ";
 }
-
-@media (max-width: 600px) {
+@media (max-height: 600px) {
   .char {
     display: flex;
     justify-content: center;
@@ -228,8 +228,11 @@ body,
     height: 1.5em;
     border-radius: 15%;
   }
+}
 
-  .wrapper {
-    width: 19em;
+@media (prefers-color-scheme: dark) {
+  .char {
+    background-color: rgb(128, 128, 128);
+    color: rgb(0, 0, 0);
   }
 }
